[gd_scene load_steps=7 format=2]

[ext_resource path="res://ARIAL.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://ARIBLK.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 386.0
margin_bottom = 533.0
color = Color( 0.152941, 0.196078, 0.243137, 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="To" type="Label" parent="."]
margin_left = 165.0
margin_top = 247.0
margin_right = 206.0
margin_bottom = 326.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "To
"

[node name="Result" type="Label" parent="."]
margin_left = 96.0
margin_top = 377.0
margin_right = 193.0
margin_bottom = 418.0
custom_fonts/font = SubResource( 2 )
text = "Result: "

[node name="Conversion" type="Label" parent="."]
margin_left = 26.0
margin_top = 421.0
margin_right = 186.0
margin_bottom = 463.0
custom_fonts/font = SubResource( 3 )
text = "Conversion Rate: "

[node name="FromCurrency" type="OptionButton" parent="."]
margin_left = 108.0
margin_top = 168.0
margin_right = 274.0
margin_bottom = 227.0
text = "USD"

[node name="ToCurrency" type="OptionButton" parent="."]
margin_left = 112.0
margin_top = 304.0
margin_right = 268.0
margin_bottom = 362.0
text = "USD"

[node name="Amount" type="LineEdit" parent="."]
margin_left = 102.0
margin_top = 84.0
margin_right = 270.0
margin_bottom = 136.0
placeholder_text = "Amount"

[node name="ResultNum" type="Label" parent="."]
margin_left = 168.0
margin_top = 375.0
margin_right = 340.0
margin_bottom = 413.0

[node name="CRNum" type="Label" parent="."]
margin_left = 200.0
margin_top = 417.0
margin_right = 351.0
margin_bottom = 479.0

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="item_selected" from="FromCurrency" to="." method="_on_FromCurrency_item_selected"]
[connection signal="item_selected" from="ToCurrency" to="." method="_on_ToCurrency_item_selected"]
[connection signal="text_changed" from="Amount" to="." method="_on_Amount_text_changed"]
